# rusthacking

./: Cargo.toml  README.md  services.db
.github/workflows/: dependabot-auto.yaml  rust.yml
migrations/2024-02-06-001747_create_service/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
