[package]
name = "rusthacking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.7", features = ["http2"] }
axum-prometheus = "0.7.0"
clap = { version = "4.5.20", features = ["derive"] }
metrics-process = "2.1.0"
serde = { version = "1.0.209", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }

thiserror = "2.0.9"
tokio = { version = "1.39.3", features = ["full", "tracing"] }
tokio-test = "0.4.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
