[package]
name = "rusthacking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.4", features = ["http2"] }
axum-prometheus = "0.7.0"
clap = { version = "4.5.48", features = ["derive"] }
metrics-process = "2.4.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }

thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
tokio-test = "0.4.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
